--- a/docs/roadmap.mdx
+++ b/docs/roadmap.mdx
@@ -34,6 +34,7 @@ Our roadmap for interface innovations aims to create a highly intuitive and acce
 
 - 🔧 **Streamlined Fine-tune Support**: Open WebUI will offer a seamless fine-tuning process by allowing users to automatically build a fine-tune dataset simply by using the interface and rating the responses. We will provide Python notebooks to help preprocess your dataset, making it ready for fine-tuning directly from the notebook. This approach will be super simple and elegantly integrates fine-tuning into user workflows.
 
+- ♿ **Accessibility Enhancements**: Making Open WebUI accessible to everyone matters deeply to us. We're actively advancing features that ensure people with diverse abilities can fully enjoy and benefit from our platform. Accessibility is not just a feature—it's a core value that shapes all our interface decisions. To help us achieve this, we're welcoming interested contributors who share this passion and have expertise in accessibility. If you believe you can help us create a more inclusive experience, please reach out at [careers@openwebui.com](mailto:careers@openwebui.com).
 
 ## Information Retrieval (RAG) 📚
 
