--- a/docs/team.mdx
+++ b/docs/team.mdx
@@ -9,6 +9,14 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 ## 🌟 Meet Our Core Development Team!
 
+:::tip 
+
+### 🚀 We're Actively Hiring!
+
+Passionate about open-source AI? [Join our team →](https://careers.openwebui.com/)
+
+:::
+
 Our team is led by the dedicated creator and founder, [Tim J. Baek](https://github.com/tjbck). Although Tim is currently the only official full-time member of the core development team, we’re also supported by talented team members from our company who work hard behind the scenes to make this project great. In addition, we are incredibly fortunate to have a community of **[amazing contributors](https://github.com/open-webui/open-webui/graphs/contributors)** who find this project valuable and actively participate in its continued success.
 
 ### 💓 Our Contributors
