--- a/docs/license.mdx
+++ b/docs/license.mdx
@@ -272,7 +272,7 @@ We want to make it as straightforward as possible for everyone, users, businesse
 |--------------------------------------|:------------------------:|----------------------------------------------------------------------|
 | Removing **ANY** Open WebUI logo/name from the UI |      ❌        | This is a clear violation, even if you add “Powered by Open WebUI” somewhere else.  |
 | Modifying/changing the Open WebUI logo or color scheme to your branding |  ❌  | The identity must remain clear and intact. No recoloring or swaps.     |
-| Adding your logo side-by-side/equal in size or priority | ❌         | Your logo must NEVER be bigger or more prominent than Open WebUI. If you place them adjacent, we must approve it, and Open WebUI always comes first, both visually and hierarchically. |
+| Adding your logo side-by-side/equal in size or priority (**Co-branding**) | ❌         | Co-branding of any kind is strictly forbidden. Your logo must NOT appear next to, be the same size as, or in comparable proximity or prominence to Open WebUI’s logo or name under any circumstances. |
 | Calling your fork “Open WebUI Enterprise” or misleadingly similar | ❌         | Don’t use our project’s name or branding in a way that could confuse users about source or official status. |
 | Major UI modifications that move, minimize, or obscure original Open WebUI branding | ❌ | Moving the logo, shrinking it, hiding it, or pushing it offscreen violates the terms. |
 | White-labelling for your business/SaaS                        | ❌        | You MUST get an enterprise or proprietary license before removing our branding for mass redistribution or resale.  |
@@ -281,7 +281,7 @@ We want to make it as straightforward as possible for everyone, users, businesse
 ### **How to Add Custom Branding Responsibly**
 
 - **DO NOT remove, shrink, relocate, or recolor Open WebUI branding.**
-- **If allowed (within limits!), your addition must appear in a secondary/footer area**—always clearly subordinate in visual hierarchy to Open WebUI’s own logo and name, and never replacing or overshadowing our original branding.
+- **Co-branding is not allowed at all.** You may NOT display your branding/logo adjacent to or alongside Open WebUI’s logo/name, nor may you display your branding in a manner that creates visual equivalence or confusion.
 - **If you want to add a “Managed by Company X” banner**, it must remain clearly distinct, unobtrusive, and subordinate to Open WebUI’s own visual hierarchy.
 - **Don’t “co-brand” or sandwich your logo next to ours** without explicit written approval. For nearly all non-trivial cases, you will need a commercial or custom license.  
 - **Always show us a screenshot before launch!** If in doubt, email [hello@openwebui.com](mailto:hello@openwebui.com)—we’re happy to review and advise.
