--- a/docs/features/sso/index.mdx
+++ b/docs/features/sso/index.mdx
@@ -21,6 +21,13 @@ It is highly recommended to check the environment variable page, to get more det
 
 :::
 
+:::success
+
+Need help with troubleshooting your SSO setup?
+Check out our [troubleshooting guide](https://docs.openwebui.com/troubleshooting/sso)
+
+:::
+
 :::danger
 
 Right now, you can only configure one OAUTH provider at a time.
