--- a/docs/features/sso/index.mdx
+++ b/docs/features/sso/index.mdx
@@ -21,7 +21,7 @@ It is highly recommended to check the environment variable page, to get more det
 
 :::
 
-:::success
+:::tip
 
 Need help with troubleshooting your SSO setup?
 Check out our [troubleshooting guide](https://docs.openwebui.com/troubleshooting/sso)
