add: understanding the layering system

--- a/docs/tutorials/theming.mdx
+++ b/docs/tutorials/theming.mdx
@@ -123,6 +123,59 @@ Here are the available toggles:
 - `systemBackgroundImage`
 - `chatBackgroundImage`
 
+### Understanding the Layering System
+
+A powerful feature of the Open WebUI theming engine is its layering system. While not always visible, this system is what allows for flexible and powerful theme customization. Think of it like layers in an image editor: each new property you define in your `theme.json` adds a layer on top of the previous one, modifying the final appearance.
+
+Here's how the layers are applied, from bottom to top:
+
+1.  **Base Theme**: This is the foundation. When you choose a `base` theme (e.g., `'dark'`), you are selecting the foundational set of styles for the entire application.
+
+2.  **Color Variables**: The `variables` object is the next layer. It allows you to override the specific colors defined in the base theme. For example, you can change `--color-primary` to a new hex code without altering any other part of the theme.
+
+3.  **Backgrounds**: After the base colors are set, you can add a background layer using either the `gradient` property or a `systemBackgroundImageUrl`. This layer sits behind all the UI elements.
+
+4.  **Animations**: On top of the background, you can add a dynamic animation layer with `tsparticlesConfig` or a custom `animationScript`. You can use CSS to control the exact positioning of this layer, such as placing it behind the main content.
+
+5.  **Custom CSS**: The `css` property is the final and most powerful layer. The styles you define here are injected last, giving them the ability to override any of the styles from the layers below. This is where you can make fine-tuned adjustments, add custom fonts, or change the layout.
+
+#### Combining Layers
+
+The real power of the theming system comes from combining these layers. You are not limited to using just one property at a time. A single theme can change the color variables, add a background image, and use custom CSS to change fonts, all at once.
+
+##### Example: "Cyberpunk Sunset" Theme
+
+Let's create a theme that combines multiple layers to achieve a unique "Cyberpunk Sunset" look.
+
+```json
+{
+  "id": "cyberpunk-sunset",
+  "name": "Cyberpunk Sunset",
+  "base": "dark",
+  "emoji": "🌇",
+  "variables": {
+    "--color-primary": "#FF00FF",
+    "--color-secondary": "#00FFFF"
+  },
+  "gradient": {
+    "enabled": true,
+    "animated": true,
+    "colors": ["#7B2ABF", "#FF00FF", "#00FFFF"],
+    "direction": 160,
+    "intensity": 75
+  },
+  "css": "@import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap'); body { font-family: 'Orbitron', sans-serif; }"
+}
+```
+
+In this example:
+-   We start with the `dark` **base theme**.
+-   We then override the primary and secondary colors with bright, cyberpunk-style hex codes in the **`variables`** layer.
+-   Next, we add an animated **`gradient`** layer with a matching color scheme to create a sunset effect.
+-   Finally, we use the **`css`** layer to import and apply the "Orbitron" font from Google Fonts, giving the UI a futuristic feel.
+
+This example demonstrates how you can stack different properties to create a cohesive and complex theme that goes far beyond simple color changes.
+
 ### CodeMirror Themes
 
 You can customize the appearance of the code editor in Open WebUI by specifying a `codeMirrorTheme` property of your `theme.json`. A wide variety of themes are available to choose from.
