--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -121,6 +121,30 @@ In summary: MCP is supported — as long as the MCP Tool Server is fronted by an
 
 To stay informed, you can follow release notes and announcements on our [GitHub Releases page](https://github.com/open-webui/open-webui/releases).
 
+#### **Q: Is Open WebUI scalable for large organizations or enterprise deployments?**  
+
+**A:** Yes—**Open WebUI is architected for massive scalability and production readiness.** It’s already trusted in deployments supporting extremely high user counts—**think tens or even hundreds of thousands of seats**—used by universities, multinational enterprises, and major organizations worldwide.
+
+Open WebUI’s stateless, container-first architecture means you’re never bottlenecked by a single server. Through horizontal scaling, flexible storage backends, externalized authentication and database support, and full container orchestration compatibility (for example, Kubernetes or Docker Swarm), you can build robust, high-availability clusters to meet even the most demanding enterprise requirements.
+
+With the right infrastructure configuration, Open WebUI will effortlessly scale from pilot projects to mission-critical worldwide rollouts.
+
+#### **Q: How can I deploy Open WebUI in a highly available, large-scale production environment?** 
+
+**A:** For organizations with demanding uptime and scale requirements, Open WebUI is designed to plug into modern production environments:
+
+- **Multiple containers** (instances) behind a load balancer for resilience and optimal performance
+- **External databases and persistent storage** for scalable, reliable data
+- **Integration with enterprise authentication** (like SSO/OIDC/LDAP) for seamless and secure login
+- **Observability and monitoring** via modern log/metrics tools
+
+If you’re planning a high-availability, enterprise-grade deployment, we recommend reviewing this excellent community resource:  
+
+👉 [The SRE's Guide to High Availability Open WebUI Deployment Architecture](http://taylorwilsdon.medium.com/the-sres-guide-to-high-availability-open-webui-deployment-architecture-2ee42654eced)  
+*(This provides a strong technical overview and best practices for large-scale Open WebUI architecture.)*
+
+Open WebUI is designed from day one to not just handle, but thrive at scale—serving large organizations, universities, and enterprises worldwide.
+
 #### **Need Further Assistance?**
 
 If you have any further questions or concerns, please reach out to our [GitHub Issues page](https://github.com/open-webui/open-webui/issues) or our [Discord channel](https://discord.gg/5rJgQTnV4s) for more help and information.
