docs: Document 'Random' and 'Generate from image' options in theme editor

--- a/docs/tutorials/theming.mdx
+++ b/docs/tutorials/theming.mdx
@@ -137,6 +137,24 @@ Here are the available toggles:
 
 ### Advanced Theming
 
+#### Generative Tools
+
+The Theme Editor includes powerful generative tools to help you quickly create new color schemes and gradients.
+
+**For Custom CSS Variables:**
+
+Located in the `Styling` tab, these tools modify the core color variables of your theme.
+
+-   **Random Button:** Clicking this will instantly generate a new, random color palette for key UI elements like backgrounds, text, and primary colors. It's a great way to discover unexpected color combinations.
+-   **Generate from Image Button:** This allows you to upload an image. Open WebUI will then analyze the image's colors and automatically generate a cohesive color palette based on them, applying it to your theme's variables.
+
+**For System Gradient Background:**
+
+Located in the `Backgrounds` tab within the gradient editor, these tools help you craft unique gradients.
+
+-   **Random Button:** This will generate a completely new gradient with a random number of colors (between 2 and 6), random color values, a random direction, and a random intensity.
+-   **Generate from Image Button:** Upload an image, and the tool will extract the most prominent colors to create a new gradient. This is perfect for creating a background that matches a specific image or brand.
+
 #### Using Custom Fonts
 
 Open WebUI lets you embed custom fonts in your theme using the `css` property to override the default font family in two ways:  
