--- a/docs/license.mdx
+++ b/docs/license.mdx
@@ -87,6 +87,7 @@ Here’s what we’ve actually seen, and why we had to act:
 
 - Entities take the entire work of Open WebUI, quietly strip out all signs of our branding, then present the platform as if it's **their own invention**.
 - They market these rebranded solutions in commercial offerings to customers and organizations, sometimes at a massive markup.
+- In some cases, they even go further by intentionally obscuring the fact that Open WebUI is available for free, so that they can charge unsuspecting users outrageous fees for something that should be accessible to everyone.
 - Some go so far as to misleadingly imply their users are dealing with the people behind the original Open WebUI, creating confusion and false expectations about who maintains the software, where it comes from, and what kind of support is available.
 - When things break or customers need feature updates, these same groups turn around and *demand support from us—the original developers—**while never having contributed a line of code, a helpful bug report, documentation, or any resources back to the project.***
 - **In effect, they extract value from the collective effort of independent contributors, misrepresent their role in the project, and give nothing back to the ecosystem or its sustainability.**
