--- a/docs/tutorials/integrations/onedrive-sharepoint.mdx
+++ b/docs/tutorials/integrations/onedrive-sharepoint.mdx
@@ -64,7 +64,7 @@ Open WebUI uses the `.default` scope for a seamless enterprise experience, meani
 
 From the **Overview** page of the App Registration you just created, copy the following values:
 
--   **Application (client) ID**: This will be your `ONEDRIVE_CLIENT_ID`.
+-   **Application (client) ID**: This will be your `ONEDRIVE_CLIENT_ID_BUSINESS`.
 -   **Directory (tenant) ID**: This will be your `ONEDRIVE_SHAREPOINT_TENANT_ID`.
 
 ## Step 5: Configure Environment Variables for Business Integration
@@ -77,7 +77,7 @@ ENABLE_ONEDRIVE_INTEGRATION=true
 
 # --- Business & SharePoint Configuration ---
 # The Application (client) ID from your Business App Registration
-ONEDRIVE_CLIENT_ID="xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
+ONEDRIVE_CLIENT_ID_BUSINESS="xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
 
 # The Directory (tenant) ID from your Business App Registration
 ONEDRIVE_SHAREPOINT_TENANT_ID="yyyyyyyy-yyyy-yyyy-yyyy-yyyyyyyyyyyy"
@@ -111,7 +111,7 @@ Add the following environment variable to your Open WebUI deployment:
 ```bash
 # --- Personal Account Configuration (Optional) ---
 # The Application (client) ID from your *second*, Personal App Registration
-ONEDRIVE_PERSONAL_CLIENT_ID="zzzzzzzz-zzzz-zzzz-zzzz-zzzzzzzzzzzz"
+ONEDRIVE_CLIENT_ID_PERSONAL="zzzzzzzz-zzzz-zzzz-zzzz-zzzzzzzzzzzz"
 ```
 
 ---
