--- a/docs/tutorials/web-search/perplexity.mdx
+++ b/docs/tutorials/web-search/perplexity.mdx
@@ -9,6 +9,10 @@ This tutorial is a community contribution and is not supported by the Open WebUI
 
 ## Perplexity API
 
+:::info
+Perplexity API in this tutorial is using Perplexity's own models, as opposed to just the websearch API. Conduct the other tutorial for the web search API.
+:::
+
 ### Setup
 
 1. Navigate to: `Admin Panel` -> `Settings` -> `Web Search`
