--- a/docs/tutorials/web-search/perplexity_search.mdx
+++ b/docs/tutorials/web-search/perplexity_search.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 30
+sidebar_position: 31
 title: "Perplexity Search"
 ---
 
@@ -17,6 +17,6 @@ Perplexity Search API is just a search engine, as opposed to the Perplexity inte
 
 1. Navigate to: `Admin Panel` -> `Settings` -> `Web Search`
 2. Toggle `Enable Web Search`
-3. Set `Web Search Engine` from dropdown menu to `perplexity`
+3. Set `Web Search Engine` from dropdown menu to `perplexity_search`
 4. Enter your Perplexity API key from [Perplexity API Key management](https://www.perplexity.ai/account/api/keys).
 5. Press save
