--- a/docs/license.mdx
+++ b/docs/license.mdx
@@ -29,21 +29,20 @@ We take your trust seriously. We want Open WebUI to stay **empowering and access
 
 ## Open WebUI License: Explained
 
-
-
 **Effective with v0.6.6 (April 19, 2025):**
 
 Open WebUI’s license is now:
 
-- **BSD-3-Clause based**, with an additional branding restriction clause:
+- Includes an additional branding restriction clause:
   - **You may NOT alter, remove, or obscure any “Open WebUI” branding** (name, logo, UI marks, etc.) in any deployment or distribution, except in the circumstances below.
   - Branding must remain clearly visible, unless:
     1. **You have 50 or fewer users** in a 30-day period;
     2. **You are a contributor**, and have gotten written permission from us for an internal deployment;
     3. **You’ve secured an enterprise license** from us which explicitly allows branding changes.
+- **CLA required for new contributions** after v0.6.5 (v0.6.6+) under the updated license.
+
 
 - **All code submitted/merged to the codebase up to and including release v0.6.5 remains BSD-3 licensed** (no branding requirement applies for that legacy code).
-- **CLA required for new contributions** after v0.6.5 (v0.6.6+) under the updated license.
 
 :::tip 
 **TL;DR: Want to use Open WebUI for free? Just keep the branding.**
