--- a/docs/license.mdx
+++ b/docs/license.mdx
@@ -31,7 +31,7 @@ We take your trust seriously. We want Open WebUI to stay **empowering and access
 
 **Effective with v0.6.6 (April 19, 2025):**
 
-Open WebUI’s license is now:
+Open WebUI’s license now:
 
 - Includes an additional branding restriction clause:
   - **You may NOT alter, remove, or obscure any “Open WebUI” branding** (name, logo, UI marks, etc.) in any deployment or distribution, except in the circumstances below.
