--- a/docs/license.mdx
+++ b/docs/license.mdx
@@ -142,15 +142,11 @@ If in doubt, or if you have concerns about your past or future contributions, pl
 
 It's a great—and complicated—question, because **"open source" can mean many different things to many people**.
 
-If we're being precise:  
-- According to the strict definition laid out by organizations like the [Open Source Initiative (OSI)](https://opensource.org/osd), *any* license restriction that dictates branding or limits how you present derivatives **technically** means the software is no longer "OSI open source."  
-- There are similar, nuanced discussions in the wider community: for instance, the Debian Free Software Guidelines, Fedora’s stance, and others, **all differ somewhat in interpretation**.
-
-So:  
 - **In the narrowest, most “by-the-book” sense—our new branding clause means Open WebUI v0.6.6+ isn’t OSI-certified "open source.”**
     - Example: The OSI would not certify licenses that require you to keep original branding.
+
 - However, compared to what most people mean in practice — **“is the code available, can I use it, fork it, change it, build things with it, and not pay you or get a special key?”** — the answer is still a resounding **yes**.
-    - We are far more open than most so-called “open core” commercial/AGPL/SSPL models, which often wall off features, require payments for APIs, or keep critical work private.
+    - We are far more open than most so-called “open core” projects, which often wall off features, require payments for APIs, or keep critical work private.
 
 **What does all this mean in practice for you?**  
 - *All of the source code is public and developed in the open.*
@@ -165,11 +161,6 @@ Some projects in our position have responded to exploitation by:
 
 **We didn’t want to do that.**  
 We want a single, shared, public codebase where everyone—from solo hackers to enterprises—can benefit from the same core improvements, transparent development, and community fixes.
-
-**To sum up:**  
-- *Strictly speaking*, our license after v0.6.6 isn’t “open source” according to OSI’s official rules.
-- *Practically speaking*, it remains radically more open, transparent, and community-driven than most commercial “source-available” projects.
-- **Our goal is to maximize freedom, fairness, and sustainability—for everyone.**
 
 We believe open ecosystems work best for users, contributors, and the future of AI. If you ever need more permissions or have questions, just talk to us—we’re committed to finding solutions that respect our contributors and community.
 
@@ -226,7 +217,7 @@ We’re happy to help make Open WebUI accessible for your research—just ask!
 
 If you operate a public fork, or a paid SaaS, and retain the Open WebUI branding:
 
-> _“This project is a customized fork of [Open WebUI](https://github.com/open-webui/open-webui), the community-driven open-source AI platform. This release is not affiliated with or maintained by the official Open WebUI team.”_
+> _“This project is a customized fork of [Open WebUI](https://github.com/open-webui/open-webui). This release is not affiliated with or maintained by the official Open WebUI team.”_
 
 Display this message—prominently—in the About section, landing page, or equivalent location. **Transparency is required.**
 
