--- a/docs/license.mdx
+++ b/docs/license.mdx
@@ -14,7 +14,7 @@ If you've been following Open WebUI’s journey, you know our mission has always
 
 But with Open WebUI’s rapid growth and success, we started seeing a pattern we couldn’t ignore: **bad actors taking our work, stripping the branding, selling it as their own, and giving nothing back.** That’s not open source—that’s exploitation. When organizations profit off our efforts, misrepresent our work, and box out the real community, it threatens the very spirit of what we’re trying to build.
 
-That’s why we’ve acted: **with Open WebUI v0.6.6+ (April 2025), our license remains permissive, BSD-3-based, but now adds a fair-use branding protection clause**. This update does **not** impact genuine users, contributors, or anyone who simply wants to use the software in good faith. If you’re a real contributor, a small team, or an organization adopting Open WebUI for internal use—**nothing changes for you**. This change **only affects those who intend to exploit the project’s goodwill**: stripping away its identity, falsely representing it, and never giving back.
+That’s why we’ve acted: **with Open WebUI v0.6.6+ (April 2025), our license remains permissive, but now adds a fair-use branding protection clause**. This update does **not** impact genuine users, contributors, or anyone who simply wants to use the software in good faith. If you’re a real contributor, a small team, or an organization adopting Open WebUI for internal use—**nothing changes for you**. This change **only affects those who intend to exploit the project’s goodwill**: stripping away its identity, falsely representing it, and never giving back.
 
 In plain terms:  
 - **Open WebUI is still free and permissively licensed.**
@@ -56,7 +56,7 @@ This is not legal advice—refer to the full [LICENSE](https://github.com/open-w
 
 ### **1. Can I still use Open WebUI freely for personal projects, businesses, or teaching?**
 
-**Yes!** Just don’t remove or alter the “Open WebUI” branding, and you’re covered by the very permissive BSD-3-Clause plus our light branding protection. Just don’t pretend your distribution is “official” from us if it isn’t.
+**Yes!** Just don’t remove or alter the “Open WebUI” branding, and you’re covered by the very permissive license with our light branding protection. Just don’t pretend your distribution is “official” from us if it isn’t.
 
 ### **2. I want to fork Open WebUI and change the UI to fit my use case. Is that allowed?**
 
