--- a/docs/getting-started/env-configuration.mdx
+++ b/docs/getting-started/env-configuration.mdx
@@ -1367,7 +1367,7 @@ After successful migration (from milvus to multitenancy milvus), legacy collecti
 
 :::
 
-:::danger
+:::warning
 
 **Critical Considerations**
 
